# asylum

./: .gitignore  AGENTS.md  AUDIT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md  SECURITY.md
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  linux.yml  pages.yml  release.yml  windows-package.yml  windows.yml
assets/: asylum.desktop  icon.icns  settings.example.json
crates/agent/: Cargo.toml
crates/agent/src/: activity.rs  command.rs  doctor.rs  lib.rs  plan.rs  probe.rs  registry.rs
crates/app/: Cargo.toml
crates/app/src/: accounts.rs  browser.rs  control.rs  crash.rs  diff.rs  fleet.rs  icons.rs  integrations.rs  logs.rs  main.rs  menu.rs  menus.rs  note.rs  notifications.rs  plugins.rs  prepare.rs  reap.rs  reload.rs  root.rs  run.rs  search.rs  secrets.rs  settings.rs  setup.rs  sidebar.rs  sitecapture.rs  state.rs  theme.rs  workspace.rs
crates/app/src/fleet/: cards.rs  composer.rs
crates/app/src/note/: action.rs  view.rs
crates/app/src/note/action/: context.rs  edit.rs  vault.rs
crates/app/src/note/view/: details.rs  editor.rs  files.rs
crates/app/src/root/: chrome.rs  palette.rs  panes.rs
crates/app/src/run/: check.rs  cleanup.rs  dispatch.rs  drain.rs  fanout.rs  launch.rs  lifecycle.rs  merge.rs  persist.rs
crates/app/src/state/: accounts.rs  design.rs  inbox.rs  integrations.rs  plugins.rs  projects.rs  review.rs  search.rs  views.rs
crates/app/tests/: crash.rs  logs.rs  notifications.rs  prepare.rs  reap.rs  settings.rs  state.rs  workspace.rs
crates/app/tests/run/: persist.rs
crates/checks/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: call.rs  completions.rs  computer.rs  ctl.rs  help.rs  keepcmd.rs  layouts.rs  main.rs  mcpcmd.rs  plugins.rs
crates/cli/tests/: completions.rs  computer.rs  help.rs  main.rs
crates/companion/: Cargo.toml
crates/companion/src/: http.rs  lib.rs  router.rs
crates/companion/tests/: lib.rs  router.rs
crates/config/: Cargo.toml
crates/config/src/: bind.rs  edit.rs  jsonc.rs  keys.rs  lib.rs  load.rs  model.rs  project.rs  token.rs  validate.rs  watch.rs
crates/config/tests/: bind.rs  edit.rs  jsonc.rs  keys.rs  load.rs  model.rs  project.rs  token.rs  validate.rs  watch.rs
crates/control/: Cargo.toml
crates/control/src/: auth.rs  client.rs  http.rs  lib.rs  router.rs  skill.rs  token.rs
crates/control/tests/: auth.rs  client.rs  lib.rs  router.rs  token.rs
crates/designmode/: Cargo.toml
crates/designmode/src/: lib.rs
crates/designmode/tests/: lib.rs
crates/fuzzy/: Cargo.toml
crates/git/: Cargo.toml
crates/github/: Cargo.toml
crates/github/src/: lib.rs
crates/github/tests/: lib.rs
crates/keep/: Cargo.toml
crates/keep/src/: lib.rs
crates/keep/tests/: lib.rs
crates/linear/: Cargo.toml
crates/linear/src/: lib.rs  query.rs
crates/linear/tests/: lib.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: catalog.rs  client.rs  host.rs  http.rs  jsonrpc.rs  lib.rs  namespace.rs  setup.rs  skill.rs  token.rs
crates/mcp/tests/: catalog.rs  client.rs  host.rs  http.rs  jsonrpc.rs  lib.rs  namespace.rs  setup.rs  token.rs
crates/notes/: Cargo.toml
crates/notify/: Cargo.toml
crates/plugin/: Cargo.toml
crates/plugin/src/: dispatch.rs  install.rs  lib.rs  load.rs  model.rs  parse.rs
crates/plugin/tests/: dispatch.rs  install.rs  load.rs  model.rs  parse.rs
crates/pluginrt/: Cargo.toml
crates/pluginrt/src/: lib.rs  wasm.rs
crates/pluginrt/tests/: lib.rs  wasm.rs
crates/preview/: Cargo.toml
crates/preview/src/: lib.rs
crates/preview/tests/: lib.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: forward.rs  http.rs  lib.rs  plan.rs  skill.rs  token.rs
crates/proxy/tests/: forward.rs  http.rs  lib.rs  plan.rs  token.rs
crates/remote/: Cargo.toml
crates/runner/: Cargo.toml
crates/runner/src/: lib.rs  scrollback.rs
crates/runner/tests/: lib.rs
crates/search/: Cargo.toml
crates/store/: Cargo.toml
crates/store/src/: account.rs  annotation.rs  control.rs  event.rs  followup.rs  lib.rs  lock.rs  model.rs  note.rs  notification.rs  project.rs  queue.rs  run.rs  runcheck.rs  schema.rs  search.rs  task.rs
crates/store/tests/: control.rs  event.rs  followup.rs  lib.rs  lock.rs  queue.rs  runcheck.rs  schema.rs  search.rs
crates/update/: Cargo.toml
crates/update/src/: lib.rs
crates/update/tests/: lib.rs
docs/: architecture.md  beginners.md  control.md  gettingstarted.md  gpui.md  homelab.md  mcp.md  notes.md  parity.md  plugins.md  roadmap.md  secrets.md
docs/book/: 01-what-is-asylum.md  02-installation-and-setup.md  03-your-first-task.md  04-the-fleet-in-depth.md  05-layouts-and-presets.md  06-diffs-checks-and-review.md  07-notes-and-knowledge.md  08-integrations.md  09-terminal-editor-preview-browser.md  10-the-cli.md  11-agent-orchestration-and-the-control-surface.md  12-the-mobile-companion-and-events.md  13-plugins.md  14-configuration-reference.md  15-expert-workflows.md  index.md
docs/videos/: 00-welcome.md  01-install-and-first-launch.md  02-open-a-project-and-pick-agents.md  03-your-first-fanout.md  04-reading-semantic-states.md  05-review-diffs-checks-annotations.md  06-merge-the-winner.md  07-layouts-and-presets.md  08-notes-and-knowledge.md  09-integrations.md  10-terminal-editor-preview-browser.md  11-the-cli-tour.md  12-agent-control-surface.md  13-mobile-companion-and-events.md  14-plugins.md  15-expert-workflows.md  index.md  trailer.md
packaging/: icon.sh  linux.sh  macos.sh  readme.md  signing.md  windows.ps1
packaging/chocolatey/: asylum.nuspec
packaging/scoop/: asylum.json
packaging/windows/: asylum.wxs
plugins/welcome/: plugin.toml  runtime.ts
site/: index.html  package.json  tsconfig.json  vite.config.ts
site/book/: index.html
site/docs/: index.html
site/src/: book.ts  common.ts  docs.ts  env.d.ts  home.ts  scene.ts  styles.css  tutorials.ts
site/tutorials/: index.html
site/video/: course.ts  plates.ts  remake.ts  speech.ts  trailer.ts
site/videos/: index.html
(+59 files in other folders)
