[package]
autotests = false
name = "app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Asylum — an Agent Development Environment."

[features]
sitecapture = ["gpui/test-support", "gpui_platform/test-support"]

# The bin is `asylumdev`: a dev build never collides with an installed `asylum`.
# Release packaging installs this same binary as `asylum`.
[[bin]]
name = "asylumdev"
path = "src/main.rs"

[dependencies]
gpui = { workspace = true }
gpui_platform = { workspace = true }
# The gpui component library. Its crates.io gpui request is redirected to our
# pinned gpui rev by the root [patch.crates-io], so the whole tree shares one gpui.
guise-ui = { workspace = true, features = ["webview"] }
# The embeddable terminal library - the ADE's terminal panes. Enable the
# gpui `ui` feature (TermView) on top of the headless workspace default.
libsinclair = { workspace = true, features = ["ui"] }

agent = { path = "../agent" }
checks = { path = "../checks" }
companion = { path = "../companion" }
config = { path = "../config" }
control = { path = "../control" }
designmode = { path = "../designmode" }
fuzzy = { path = "../fuzzy" }
git = { path = "../git" }
github = { path = "../github" }
linear = { path = "../linear" }
notify = { path = "../notify" }
notes = { path = "../notes" }
plugin = { path = "../plugin" }
pluginrt = { path = "../pluginrt" }
preview = { path = "../preview" }
remote = { path = "../remote" }
runner = { path = "../runner" }
search = { path = "../search" }
store = { path = "../store" }
update = { path = "../update" }

anyhow = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }

# Desktop packaging. `cargo bundle --release` produces Asylum.app (macOS) and a
# `.deb` (Linux); the release workflow wraps the .app into a signed .dmg. The
# bundled binary is installed as `asylum` (the dev build stays `asylumdev`).
[package.metadata.bundle]
name = "Asylum"
identifier = "dev.asylum.app"
short_description = "An Agent Development Environment."
long_description = "Run a fleet of AI coding agents in parallel, each isolated in its own git worktree, then compare and merge the winner."
category = "Developer Tool"
copyright = "Copyright © 2026 Asylum"
osx_minimum_system_version = "11.0"
