[package]
autotests = false
name = "app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Asylum — an Agent Development Environment."

[features]
sitecapture = ["gpui/test-support", "gpui_platform/test-support"]

# The bin is `asylumdev`: a dev build never collides with an installed `asylum`.
# Release packaging installs this same binary as `asylum`.
[[bin]]
name = "asylumdev"
path = "src/main.rs"

[dependencies]
gpui = { workspace = true }
gpui_platform = { workspace = true }
# The gpui component library. Its crates.io gpui request is redirected to our
# pinned gpui rev by the root [patch.crates-io], so the whole tree shares one gpui.
guise-ui = { workspace = true, features = ["webview"] }
# The embeddable terminal library - the ADE's terminal panes. Enable the
# gpui `ui` feature (TermView) on top of the headless workspace default.
libsinclair = { workspace = true, features = ["ui"] }

agent = { path = "../agent" }
checks = { path = "../checks" }
companion = { path = "../companion" }
config = { path = "../config" }
control = { path = "../control" }
designmode = { path = "../designmode" }
fuzzy = { path = "../fuzzy" }
git = { path = "../git" }
github = { path = "../github" }
keep = { path = "../keep" }
linear = { path = "../linear" }
mcp = { path = "../mcp" }
notify = { path = "../notify" }
notes = { path = "../notes" }
plugin = { path = "../plugin" }
pluginrt = { path = "../pluginrt" }
preview = { path = "../preview" }
proxy = { path = "../proxy" }
runner = { path = "../runner" }
search = { path = "../search" }
store = { path = "../store" }
update = { path = "../update" }
zeroize = "1"

anyhow = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

# Group signals for deterministic agent teardown (see src/reap.rs).
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# macOS packaging. `cargo bundle --release --format osx` produces Asylum.app; the
# release workflow wraps it into a signed/notarized .dmg (packaging/macos.sh).
# The bundled binary is installed as `asylum` (the dev build stays `asylumdev`).
[package.metadata.bundle]
name = "Asylum"
identifier = "dev.asylum.app"
icon = ["../../assets/icon.icns", "../../assets/icon512.png"]
short_description = "An Agent Development Environment."
long_description = "Run a fleet of AI coding agents in parallel, each isolated in its own git worktree, then compare and merge the winner."
category = "Developer Tool"
copyright = "Copyright © 2026 Asylum"
osx_minimum_system_version = "11.0"

# Linux .deb packaging (see packaging/linux.sh). An explicit `assets` list
# disables cargo-deb's automatic binary inclusion, so the binary is listed here
# too; cargo-deb remaps the `target/release/` prefix to the actual
# --target/profile path. The `asylumdev` bin is installed as `asylum`.
[package.metadata.deb]
name = "asylum"
maintainer = "Wess Cope <me@wess.io>"
license-file = ["../../LICENSE", "0"]
section = "devel"
priority = "optional"
extended-description = "Asylum is an Agent Development Environment: run a fleet of AI coding agents in parallel, each isolated in its own git worktree, then compare and merge the winner."
assets = [
    ["target/release/asylumdev", "usr/bin/asylum", "755"],
    ["../../assets/asylum.desktop", "usr/share/applications/asylum.desktop", "644"],
    ["../../assets/icon512.png", "usr/share/pixmaps/asylum.png", "644"],
]
