[package]
autotests = false
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The asylum CLI: scripting worktrees, agent runs, search, and computer use."

[[bin]]
name = "asylum"
path = "src/main.rs"

[dependencies]
agent = { path = "../agent" }
config = { path = "../config" }
control = { path = "../control" }
git = { path = "../git" }
keep = { path = "../keep" }
mcp = { path = "../mcp" }
plugin = { path = "../plugin" }
proxy = { path = "../proxy" }
runner = { path = "../runner" }
search = { path = "../search" }
serde_json = { workspace = true }
