[package]
autotests = false
name = "plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Manifest-based plugins for the ADE: parse plugin.toml into contributed commands, panels, webviews, triggers, and agent tools."

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
