[package]
autotests = false
name = "update"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Update checks against GitHub Releases: compare the running version and point at the download."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
